syntax = "proto3";

package common;

option go_package = "github.com/tamirat-dejene/ha-soranu/shared/protos/envent_envelopepb;envent_envelopepb";

message EventEnvelope {
	string event_id         = 1;
	string event_type       = 2;
	int64  occurred_at_unix = 3;
	bytes  payload          = 4;
}